@@ -2,6 +2,7 @@
 
  - Fix for bug 27147: Added necessary dependency for update task to have them run in the correct order.
  - Fix for bug 27065: If reading the replication monitor counter from the slave fails 10 times fall back to master to obtain a connection.
+ - Fix for bug 27126: Trying to fetch a connection from the newly created pool if the pool has been stopped in the meantime.
 
 * 2013-06-17 - jan.bauerdick@open-xchange.com
 
